--- a/solar.html
+++ b/solar.html
@@ -130,7 +130,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-span-4 pl-10">
+                <div class="col-span-4 md:pl-10 pl-0">
                     <div id="scrollspy-2" class="space-y-4 ">
                         <div id="whysolar" class="space-y-8">
                             <h3 class="text-sm text-gray-500   ">>> WHY SOLAR?</h3>
