--- a/src/software.html
+++ b/src/software.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solar</title>
+    <title>Software</title>
     <link rel="icon" type="image/x-icon" href="img/fav.png">
     <link href="./custom.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
