--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,7 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
    <link href="./output.css" rel="stylesheet">
-   <script type="text/javascript" src="../node_modules/preline/dist/preline.js"></script>
-    <script
-    type="text/javascript"
-    src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"></script>
+   <script type="text/javascript" src="../node_modules/preline/dist/preline.js"></script> 
 
 </head>
 
@@ -45,28 +42,28 @@
             <ul
                class="flex flex-col p-4 md:p-0 mt-4 text-lg font-normal border border-gray-100 rounded-lg  md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:    ">
                <li>
-                  <a href="solar.html" class="block py-2 px-3 text-main rounded    md:p-0  "
+                  <a href="solar.html" class="menuitem"
                      aria-current="page">Solar</a>
                </li>
                <li>
                   <a href="software.html"
-                     class="block py-2 px-3 text-main rounded hover:text-main   md:p-0      ">Software</a>
+                     class="menuitem">Software</a>
                </li>
                <li>
                   <a href="hardware.html"
-                     class="block py-2 px-3 text-main rounded   md:p-0  hover:text-main   ">Hardware</a>
+                     class="menuitem">Hardware</a>
                </li>
                <li>
                   <a href="projects.html"
-                     class="block py-2 px-3 text-main rounded   md:p-0  hover:text-main   ">Projects</a>
+                     class="menuitem">Projects</a>
                </li>
                <li>
                   <a href="aboutus.html"
-                     class="block py-2 px-3 text-main rounded   md:p-0  hover:text-main  ">About Us</a>
+                     class="menuitem">About Us</a>
                </li>
                <li>
                   <a href="downloads.html"
-                     class="block py-2 px-3 text-main rounded   md:p-0  hover:text-main  ">Downloads</a>
+                     class="menuitem">Downloads</a>
                </li>
             </ul>
          </div>
@@ -120,7 +117,7 @@
                      Our Key Focuses</h2>
                </div>
                <div class="lg:w-1/2">
-                  <p class="mb-4 text-lg text-para">
+                  <p class="mb-4 text-para">
                      We offer a pioneering approach to powering key sectors with clean, reliable energy.
                   </p>
                </div>
@@ -200,7 +197,7 @@
          <h2 class="  text-3xl font-normal   text-main sm:text-5xl sm:leading-none text-center">
             What We Offer
          </h2>
-         <p class="mb-4 text-lg text-para text-center">
+         <p class="mb-4 text-para text-center">
             Achieve high growth by setting up new benchmarks
          </p>
       </div>
@@ -434,7 +431,7 @@
                      News & Events </h2>
                </div>
                <div class="lg:w-1/2">
-                  <p class="mb-4 text-lg text-para">
+                  <p class="mb-4 text-para">
                      Stay updated with our latest news and upcoming events, keeping you informed and engaged with our
                      organization's developments and activities.
                   </p>
@@ -514,7 +511,7 @@
                <div class="mb-6 lg:mb-0   lg:pr-5 lg:w-2/6 w-full">
                   <h2 class="  text-3xl font-normal  text-gray-900 sm:text-5xl sm:leading-none mb-10">
                      Partnering to deliver your company’s growth! </h2>
-                  <p class="   text-lg text-para  ">
+                  <p class="   text-para  ">
                      Collaborating closely with our partners to ensure the delivery of your company's growth objectives.
                   </p>
                </div>
@@ -548,7 +545,7 @@
             <h2 class="  text-3xl font-normal   text-main sm:text-5xl sm:leading-none text-center">
                Our Gallery
             </h2>
-            <p class="  text-lg text-para text-center">
+            <p class="  text-para text-center">
                Here are a few snapshots of the finished projects
             </p>
          </div>
