--- a/src/solar.html
+++ b/src/solar.html
@@ -12,8 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link href="./output.css" rel="stylesheet">
-    <script type="text/javascript" src="../node_modules/preline/dist/preline.js"></script>
-    <script type="text/javascript" src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"></script>
+    <script type="text/javascript" src="../node_modules/preline/dist/preline.js"></script> 
 </head>
 
 <body class=" ">
@@ -41,25 +40,23 @@
                 <ul
                     class="flex flex-col p-4 md:p-0 mt-4 text-lg font-normal border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white   ">
                     <li>
-                        <a href="solar.html"
-                            class="block py-2 px-3 text-sec hover:text-sub text-sub font-bold    md:p-0  "
-                            aria-current="page">Solar</a>
+                        <a href="solar.html"class="menuactive" aria-current="page">Solar</a>
                     </li>
                     <li>
-                        <a href="software.html" class="block py-2 px-3 text-main hover:text-sub md:p-0">Software</a>
+                        <a href="software.html" class="menuitem">Software</a>
                     </li>
                     <li>
-                        <a href="hardware.html" class="block py-2 px-3 text-main md:p-0  hover:text-sub  ">Hardware</a>
+                        <a href="hardware.html" class="menuitem">Hardware</a>
                     </li>
                     <li>
-                        <a href="projects.html" class="block py-2 px-3 text-main md:p-0  hover:text-sub  ">Projects</a>
+                        <a href="projects.html" class="menuitem">Projects</a>
                     </li>
                     <li>
-                        <a href="aboutus.html" class="block py-2 px-3 text-main md:p-0  hover:text-sub ">About
+                        <a href="aboutus.html" class="menuitem">About
                             Us</a>
                     </li>
                     <li>
-                        <a href="downloads.html" class="block py-2 px-3 text-main md:p-0  hover:text-sub ">Downloads</a>
+                        <a href="downloads.html" class="menuitem">Downloads</a>
                     </li>
                 </ul>
             </div>
@@ -74,7 +71,7 @@
                             Solar</h2>
                     </div>
                     <div class="lg:w-1/2">
-                        <p class="text-lg text-para">
+                        <p class="text-para">
                             Allows individuals and businesses to generate their own electricity, reducing dependency on
                             centralized energy grids.
                         </p>
@@ -91,13 +88,11 @@
                 <div class="mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl  ">
                     <div class="flex flex-col items-center justify-between xl:flex-row">
                         <hr class="my-48">
-
                     </div>
                 </div>
             </div>
         </div>
     </section>
-  
     <section>
         <div class="px-6 py-10 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-2xl   ">
             <div class="md:grid grid-cols-5  ">
@@ -106,24 +101,24 @@
                         data-hs-scrollspy-scrollable-parent="#scrollspy-scrollable-parent-2">
                         <li data-hs-scrollspy-group>
                             <a href="#whysolar"
-                                class="block text-base font-medium leading-6   active:font-bold focus:outline-none hs-scrollspy-active:font-bold border-l-4 border-[#4E8BE4] my-5 py-6 p-4    shadow-xl">WHY
+                                class="menuactive1">WHY
                                 SOLAR</a>
                         </li>
                         <li data-hs-scrollspy-group>
                             <a href="#solar-projects"
-                                class="block py-6  p-4  text-base leading-6  hs-scrollspy-active:text-sub  hs-scrollspy-active:font-bold  focus:border-l-4 focus:border-[#4E8BE4] focus:shadow-2xl">SOLAR
+                                class="menuitem1">SOLAR
                                 PROJECTS
                             </a>
                         </li>
                         <li data-hs-scrollspy-group>
                             <a href="#upcomming-projects"
-                                class="block py-6  p-4  text-base font-medium leading-6 hs-scrollspy-active:text- yellow-600 focus:border-l-4 focus:border-[#4E8BE4] focus:shadow-2xl">UPCOMING
+                                class="menuitem1">UPCOMING
                                 PROJECTS
                             </a>
                         </li>
                         <li data-hs-scrollspy-group>
                             <a href="#assignment-in-solar"
-                                class="block py-6  p-4  text-base font-medium leading-6 hs-scrollspy-active:text- yellow-600 focus:border-l-4 focus:border-[#4E8BE4] focus:shadow-2xl">ASSIGNMENT
+                                class="menuitem1">ASSIGNMENT
                                 IN SOLAR
                             </a>
                         </li>
@@ -150,9 +145,9 @@
                                 company will herald a revolution and the world would see a million suns rising...</p>
                             <img src="img/s1.png">
                             <h4 class="headc">Solar Energy</h4>
-                            <p class="text-base text-para ">There is no better source of clean and natural energy
-                                than the sun. It radiates more than 10,000 times the amount of energy that the entire
-                                world would consume annually. Given its abundance, solar energy can cater to the
+                            <p class="text-base text-para ">There is no better source of clean and natural energy than
+                                the sun. It radiates more than 10,000 times the amount of energy that the entire world
+                                would consume annually. Given its abundance, solar energy can cater to the
                                 ever-increasing demand for fuel and make for an efficient source of renewable energy. It
                                 is probably the only source of energy that emits no noise while generating power. In
                                 addition, it is modular, scalable and highly flexible in nature.<br>
@@ -168,7 +163,6 @@
                                 solar electricity, and is committed to achieving grid parity by 2017. Kaihatsu Solar is
                                 also working to reduce the cost of setting up solar energy systems for bulk power
                                 generation.</p>
-
                         </div>
                         <hr class="hrline">
                         <div id="solar-projects" class=" space-y-5  " data-twe-smooth-scroll-init>
@@ -245,8 +239,6 @@
                                     Engineering. Kaihatsu took full responsibility of all the design, engineering of
                                     electrical, mechanical and civil work of the project.</p>
                             </ul>
-
-
                         </div>
                         <hr class="hrline">
                         <div id="upcomming-projects" class=" space-y-5  ">
@@ -318,7 +310,6 @@
                                 <li class="font-semibold">HEXEN EXPORTS</li>
                                 <p>Kaihatsu is working as solar consultants.</p>
                             </ul>
-
                         </div>
                         <hr class="hrline">
                         <div id="assignment-in-solar" class=" space-y-5  text-para ">
@@ -567,8 +558,6 @@
                                     <img src="img/s6.png" class="  ">
                                 </div>
                             </div>
-
-
                         </div>
                     </div>
                 </div>
