--- a/src/software.html
+++ b/src/software.html
@@ -13,7 +13,7 @@
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link href="./output.css" rel="stylesheet">
     <script type="text/javascript" src="../node_modules/preline/dist/preline.js"></script>
-    
+
 </head>
 
 <body class=" ">
@@ -245,7 +245,8 @@
                                 specific needs and we will
                                 get back to you with our proposal.
                             </p>
-                            <div class="bg-[#ECF2FC] p-8 mx-9 text-para"> These projects are listed here to show our development
+                            <div class="bg-[#ECF2FC] p-8 mx-9 text-para"> These projects are listed here to show
+                                our development
                                 capabilities. The intellectual property rights as well as manufacturing rights may or
                                 may not be with us. However if some one is interested in purchasing these products we
                                 can forward the inquiry to the concern company. Kindly send us you requirement
@@ -472,7 +473,8 @@
                             <p class="p">The mini ERP package overcomes this situation. It is ideal for small business
                                 houses.Designed with Microsoft Jet Engine™ at backed, it gives secure but non expensive
                                 data base management.</p>
-                            <div class="bg-[#ECF2FC] p-8 mx-9 text-para">These projects are listed here to show our development
+                            <div class="bg-[#ECF2FC] p-8 mx-9 text-para">These projects are listed here to show
+                                our development
                                 capabilities. The intellectual property rights as well as manufacturing rights may or
                                 may not be with us. However if some one is interested in purchasing these products we
                                 can forward the inquiry to the concern company. Kindly send us you requirement at  <a
@@ -578,11 +580,13 @@
                                 <li class="font-semibold">Help:</li>
                                 <p>Online help is available. The printed installation manual is included.</p>
                             </ul>
-                            <div class="bg-[#ECF2FC] p-8 mx-9 text-para" > The Telephone features are completely dependent on type
+                            <div class="bg-[#ECF2FC] p-8 mx-9 text-para"> The Telephone features are completely
+                                dependent on type
                                 of modem and type of exchange. Bliss does not come with own modem. If you are not sure
                                 about your telephone exchange facility or the feature support from Modem, we recommend
                                 you to download the test program from the site, before purchasing the product. Your can
-                                download <a href="http://ktcpl.com/Website/testprogram.html" class="text-sec"> Test Program For Modem</a>
+                                download <a href="http://ktcpl.com/Website/testprogram.html" class="text-sec"> Test
+                                    Program For Modem</a>
                             </div>
                             <h3 class="headb">Comparison Chart</h3>
                             <h4 class="headc">Bliss is actually a combination of Scheduler and Call Centre software.
@@ -1683,7 +1687,11 @@
                                 the details and the facilities about the hospital. Click http://www.ltmmc.org to go to
                                 their home page.
                             </p>
-                            <div class="bg-[#ECF2FC] p-8 mx-9 text-para"> These projects are listed here to show our development capabilities. The intellectual property rights as well as manufacturing rights may or may not be with us. However if some one is interested in purchasing these products we can forward the inquiry to the concern company. Kindly send us you requirement at<a href="mailto:sales@ktcpl.com" class="text-sec">  sales@ktcpl.com</a>
+                            <div class="bg-[#ECF2FC] p-8 mx-9 text-para"> These projects are listed here to show
+                                our development capabilities. The intellectual property rights as well as manufacturing
+                                rights may or may not be with us. However if some one is interested in purchasing these
+                                products we can forward the inquiry to the concern company. Kindly send us you
+                                requirement at<a href="mailto:sales@ktcpl.com" class="text-sec">  sales@ktcpl.com</a>
                             </div>
 
                         </div>
