--- a/src/software.html
+++ b/src/software.html
@@ -308,7 +308,7 @@
                             <p class="p">Based on the parameter, or combination of parameters a control can be defines.
                                 This control can be activated by any PC port like IR, USB, Serial, LAN or specially
                                 designed I/O card.</p>
-                            <ul class="list-disc list-outside ml-4 space-y-2 text-para; ">
+                            <ul class="listul ">
                                 <li class="font-semibold">Security</li>
                                 <p class="p">There is a complete user level security. The layout files can be generated
                                     and used by the different access code users. Hence, using the same hardware, the
