--- a/src/software.html
+++ b/src/software.html
@@ -146,7 +146,7 @@
               data-hs-scrollspy-scrollable-parent="#scrollspy-scrollable-parent-2"
             >
               <li data-hs-scrollspy-group>
-                <a href="#scada-system" class="menuitem1">Scada System</a>
+                <a href="#scada-system" class="menuactive1">Scada System</a>
               </li>
               <li data-hs-scrollspy-group>
                 <a href="#engineering" class="menuitem1">Engineering </a>
