--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="scroll-smooth">
 
   <head>
     <meta charset="UTF-8" />
@@ -76,6 +76,11 @@
             <span class="sm:text-6xl text-3xl font-sans not-italic">and</span>
             Quality <br />
             <span class="sm:text-6xl text-3xl font-sans not-italic">makes lasting impression...</span>
+            <div class="w-48 pt-16 flex items-center flex-row "> <a href="#scrollto" class="text-white font-medium rounded-lg text-sm px-2 py-2 text-center   font-sans not-italic " > Scroll Down</a>
+              <svg class="w-4 h-4 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+               </svg>
+             </div>
           </h1>
           <div class="absolute" x-show="active == 1" x-transition:enter="transition duration-1000"
             x-transition:enter-start="transform translate-x-full" x-transition:enter-end="transform translate-x-0"
