--- a/contact.html
+++ b/contact.html
@@ -316,7 +316,6 @@
             </p>
           </div>
           <div class="grid lg:justify-items-end justify-items-start">
-            <p class="mt-2 space-y-2 text-para text-base"></p>
             <div class="flex flex-row text-para">
               <span class="font-semibold mr-3"> Call:</span>
               <ul>
@@ -327,7 +326,8 @@
           </div>
         </div>
       </div>
-      <div class="px-4 mt-12 sm:max-w-xl md:max-w-full lg:max-w-screen-2xl lg:px-8 bg-[#F9F5FF] mx-auto">
+      <div class="bg-[#F9F5FF] "> 
+      <div class="px-4 mt-12 sm:max-w-xl md:max-w-full lg:max-w-screen-2xl lg:px-8 mx-auto">
         <div class="flex flex-col justify-between py-5 sm:flex-row">
           <p class="text-para text-base">
             Kaihatsu Techno Centre Pvt Ltd @2024 All Rights Reserved.
@@ -364,6 +364,7 @@
           </div>
         </div>
       </div>
+    </div>
     </footer>
   </body>
 
