--- a/hardware.html
+++ b/hardware.html
@@ -371,15 +371,13 @@
                   all the standard tests certification prevailing in India.
                 </p>
                 <p>Products based on this design are presently sold in India</p>
-                <div class="bg-[#ECF2FC] p-8 mx-9 text-para">
+                <div class="bg-[#ECF2FC] p-8 text-para !text-main text-center w-4/5 mx-auto">
                   These projects are listed here to show our development
                   capabilities. The intellectual property right as well as
                   manufacturing rights may or may not be with us. However if
                   some one is interested in purchasing these products we can
                   forward the inquiry to the concern company. Kindly send us you
-                  requirement at
-                  <a href="mailto:sales@ktcpl.com" class="text-sec">
-                    sales@ktcpl.com</a>
+                  requirement at <a href="mailto:sales@ktcpl.com" class="text-sec underline">sales@ktcpl.com</a>
                 </div>
               </div>
               <hr class="hrline" />
@@ -765,7 +763,8 @@
           </div>
         </div>
       </div>
-      <div class="px-4 mt-12 sm:max-w-xl md:max-w-full lg:max-w-screen-2xl lg:px-8 bg-[#F9F5FF] mx-auto">
+      <div class="bg-[#F9F5FF] "> 
+      <div class="px-4 mt-12 sm:max-w-xl md:max-w-full lg:max-w-screen-2xl lg:px-8 mx-auto">
         <div class="flex flex-col justify-between py-5 sm:flex-row">
           <p class="text-para text-base">
             Kaihatsu Techno Centre Pvt Ltd @2024 All Rights Reserved.
@@ -802,6 +801,7 @@
           </div>
         </div>
       </div>
+    </div>
     </footer>
   </body>
 
