--- a/downloads.html
+++ b/downloads.html
@@ -314,7 +314,8 @@
           </div>
         </div>
       </div>
-      <div class="px-4 mt-12 sm:max-w-xl md:max-w-full lg:max-w-screen-2xl lg:px-8 bg-[#F9F5FF] mx-auto">
+      <div class="bg-[#F9F5FF] "> 
+      <div class="px-4 mt-12 sm:max-w-xl md:max-w-full lg:max-w-screen-2xl lg:px-8 mx-auto">
         <div class="flex flex-col justify-between py-5 sm:flex-row">
           <p class="text-para text-base">
             Kaihatsu Techno Centre Pvt Ltd @2024 All Rights Reserved.
@@ -351,6 +352,7 @@
           </div>
         </div>
       </div>
+    </div>
     </footer>
   </body>
 
